Upgraded Tika to 2.7.0.