@@ -3,7 +3,7 @@ package com.norconex.importer;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -11,7 +11,6 @@ import org.junit.jupiter.api.io.TempDir;
 import com.norconex.commons.lang.xml.XML;
 import com.norconex.importer.handler.HandlerConsumer;
 import com.norconex.importer.handler.tagger.impl.ConstantTagger;
-import com.norconex.importer.parser.GenericDocumentParserFactory;
 import com.norconex.importer.response.DummyResponseProcessor;
 
 class ImporterConfigTest {
@@ -24,8 +23,7 @@ class ImporterConfigTest {
         var config = new ImporterConfig();
         config.setMaxMemoryInstance(123L);
         config.setMaxMemoryPool(456L);
-        config.setParseErrorsSaveDir(tempDir.resolve("saveDir"));
-        config.setParserFactory(new GenericDocumentParserFactory());
+        config.getParseConfig().setErrorsSaveDir(tempDir.resolve("saveDir"));
 
         var preTagger = new ConstantTagger();
         preTagger.addConstant("test1", "abc");
@@ -33,8 +31,7 @@ class ImporterConfigTest {
         var postTagger = new ConstantTagger();
         postTagger.addConstant("test2", "def");
         config.setPostParseConsumer(new HandlerConsumer(postTagger));
-        config.setResponseProcessors(Arrays.asList(
-                new DummyResponseProcessor()));
+        config.setResponseProcessors(List.of(new DummyResponseProcessor()));
         config.setTempDir(tempDir.resolve("temp"));
 
         assertDoesNotThrow(() -> XML.assertWriteRead(config, "importer"));
